--- a/scss/base/_toast.scss
+++ b/scss/base/_toast.scss
@@ -1,9 +1,9 @@
 #robroy-toast-container {
 	align-items: flex-end;
-	bottom: 0;
+	bottom: 100%;
 	display: flex;
 	flex-direction: column;
-	position: fixed;
+	position: absolute;
 	right: 0;
 	z-index: $robroy-toast-zindex;
 }
